--- a/package.json
+++ b/package.json
@@ -4,11 +4,19 @@
   "private": true,
   "homepage": "https://nikkuts.github.io/goit-react-hw-08-phonebook/",
   "dependencies": {
+    "@chakra-ui/button": "^2.0.18",
+    "@chakra-ui/input": "^2.0.22",
+    "@chakra-ui/layout": "^2.2.0",
+    "@chakra-ui/react": "^2.7.1",
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
     "@reduxjs/toolkit": "^1.9.5",
     "@testing-library/jest-dom": "^5.16.3",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.4.0",
+    "formik": "^2.4.2",
+    "framer-motion": "^10.12.16",
     "prop-types": "^15.8.1",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
